--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,8 @@
               "src/styles.css",
               "node_modules/bootstrap/scss/bootstrap.scss"            ],
             "scripts": [
-              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "/node_modules/jquery/dist/jquery.min.js"
             ]
           },
           "configurations": {
